refactor: with external authentication

--- a/configs.yaml
+++ b/configs.yaml
@@ -52,14 +52,17 @@ infrastructure:
     time_to_live: 43200000 # 12h
 
   authenticators:
-    - engine: forward
-      forward:
-        uri: https://asia-southeast1-scrapnode-iam.cloudfunctions.net/api/auth/jwt/debug
+    - engine: external
+      external:
+        uri: http://localhost:4000/sessions/whoami
         headers:
           - Content-Type
           - User-Agent
           - Cookie
           - X-Session-Token
+        mapper:
+          "sub": "identity.id"
+          "name": "identity.traits.username"
     - engine: ask
       ask:
         access_key: admin@kanthorlabs.com
