--- a/configs.yaml
+++ b/configs.yaml
@@ -91,11 +91,15 @@ sdk:
   gateway:
     addr: :8180
     timeout: 60000
+    origins:
+      - http://localhost:3000
 
 portal:
   gateway:
     addr: :8280
     timeout: 60000
+    origins:
+      - http://localhost:3000
 
 scheduler:
   request:
