--- a/docker/.kanthor/configs.yaml
+++ b/docker/.kanthor/configs.yaml
@@ -99,11 +99,15 @@ sdk:
   gateway:
     addr: :8180
     timeout: 60000
+    origins:
+      - http://localhost:3000
 
 portal:
   gateway:
     addr: :8280
     timeout: 60000
+    origins:
+      - http://localhost:3000
 
 scheduler:
   request:
