--- a/.github/workflows/sdk.yaml
+++ b/.github/workflows/sdk.yaml
@@ -17,12 +17,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: kanthor-sdk-go
-          repository: kanthor-sdk-go
+          repository: ${{ env.GITHUB_REPOSITORY_OWNER_ID }}/kanthor-sdk-go
           ref: "master"
           token: ${{ secrets.KANTHOR_GITHUB_TOKEN }}
 
       - name: setup git config
-        working-directory: ${{ env.GITHUB_REPOSITORY_OWNER_ID }}/kanthor-sdk-go
+        working-directory: kanthor-sdk-go
         run: |
           git config user.name "Kanthor SDK Bot"
           git config user.email "<>"
