--- a/.github/workflows/sdk.yaml
+++ b/.github/workflows/sdk.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: kanthor-sdk-go
-          repository: ${{ github.repository.owner_id }}/kanthor-sdk-go
+          repository: ${{ $GITHUB_REPOSITORY_OWNER }}/kanthor-sdk-go
           ref: "master"
           token: ${{ secrets.KANTHOR_GITHUB_TOKEN }}
 
