--- a/.github/workflows/sdk.yaml
+++ b/.github/workflows/sdk.yaml
@@ -9,8 +9,6 @@ jobs:
   go:
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.event.head_commit.message, 'sync') || (startsWith(github.event.head_commit.message, 'ci') && contains(github.event.head_commit.message, '#sdk')) }}
-    env:
-      REPOSITORY_OWNER: $GITHUB_REPOSITORY_OWNER
     steps:
       - uses: actions/checkout@v3
         with:
@@ -19,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: kanthor-sdk-go
-          repository: ${{ env.REPOSITORY_OWNER }}/kanthor-sdk-go
+          repository: ${{ github.repository.owner }}/kanthor-sdk-go
           ref: "master"
           token: ${{ secrets.KANTHOR_GITHUB_TOKEN }}
 
