--- a/.github/workflows/sdk.yaml
+++ b/.github/workflows/sdk.yaml
@@ -30,6 +30,7 @@ jobs:
         run: |
           cp core/openapi/Sdk_swagger.json sdk/openapi.json
           cp core/openapi/Sdk_swagger.yaml sdk/openapi.yaml
+          cp core/scripts/sdk_setup.sh sdk/scripts/sdk_setup.sh
 
       - name: push
         working-directory: sdk
