refactor: naming of config

--- a/docker/.kanthor/configs.yaml
+++ b/docker/.kanthor/configs.yaml
@@ -12,12 +12,12 @@ logger:
 database:
   uri: *postgres_uri
   migration:
-    source: file://./data/migration/database/sql
+    source: file://./data/migration/database
 
 datastore:
   uri: *postgres_uri
   migration:
-    source: file://./data/migration/datastore/sql
+    source: file://./data/migration/datastore
 
 # infrastructure
 infrastructure:
@@ -52,14 +52,6 @@ infrastructure:
     time_to_live: 43200000 # 12h
 
   authenticators:
-    - engine: external
-      external:
-        uri: http://localhost:4000/sessions/whoami
-        headers:
-          - Content-Type
-          - User-Agent
-          - Cookie
-          - X-Session-Token
     - engine: ask
       ask:
         access_key: admin@kanthorlabs.com
@@ -73,9 +65,6 @@ infrastructure:
       policy_uri: *postgres_uri
       watcher:
         uri: *nats_uri
-
-  metric:
-    engine: noop
 
   streaming:
     name: main
@@ -124,3 +113,15 @@ storage:
     put:
       timeout: 60000 # 60s
       size: 1000
+
+recovery:
+  cronjob:
+    scheduler: "*/15 * * * *"
+    timeout: 300000 # 5m
+    batch_size: 100
+    buckets:
+      - offset: 0 # 30m
+        duration: 1800000 # 30m
+  consumer:
+    timeout: 900000 # 15m
+    batch_size: 300
