--- a/docker/.kanthor/configs.yaml
+++ b/docker/.kanthor/configs.yaml
@@ -120,8 +120,20 @@ recovery:
     timeout: 300000 # 5m
     batch_size: 100
     buckets:
-      - offset: 0 # 30m
+      - offset: 0
         duration: 1800000 # 30m
   consumer:
     timeout: 900000 # 15m
-    batch_size: 300
+    batch_size: 10
+
+attempt:
+  cronjob:
+    scheduler: "*/15 * * * *"
+    timeout: 300000 # 5m
+    batch_size: 100
+    buckets:
+      - offset: 0
+        duration: 1800000 # 30m
+  consumer:
+    timeout: 900000 # 15m
+    batch_size: 10
