--- a/configs.yaml
+++ b/configs.yaml
@@ -124,7 +124,7 @@ recovery:
         duration: 1800000 # 30m
   consumer:
     timeout: 900000 # 15m
-    batch_size: 10
+    batch_size: 100
 
 attempt:
   cronjob:
@@ -136,5 +136,17 @@ attempt:
         duration: 1800000 # 30m
   consumer:
     timeout: 900000 # 15m
-    batch_size: 10
+    batch_size: 100
     schedule_delay: 900000 # 15m
+  trigger:
+    scheduler: "*/15 * * * *"
+    timeout: 300000 # 5m
+    buckets:
+      - offset: 0
+        duration: 1800000 # 30m
+  selector:
+    timeout: 900000 # 15m
+    batch_size: 100
+    counter: 3
+  endeavor:
+    concurrency: 500
