--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,6 +55,7 @@ services:
       - kanthor
     volumes:
       - ./docker/.kanthor:/root/.kanthor
+      - ./data:/app/data
     command: 
       - kanthor
       - migrate
@@ -72,6 +73,7 @@ services:
       - kanthor
     volumes:
       - ./docker/.kanthor:/root/.kanthor
+      - ./data:/app/data
     command: 
       - kanthor
       - migrate
@@ -176,6 +178,8 @@ services:
         condition: service_started
       warehouse:
         condition: service_healthy
+      migration-database:
+        condition: service_started
       migration-datastore:
         condition: service_started
     container_name: kanthor-services-storage
@@ -189,87 +193,7 @@ services:
       - kanthor
       - serve
       - storage
-
-  attempt-trigger-planner:
-    depends_on:
-      streaming:
-        condition: service_started
-      warehouse:
-        condition: service_healthy
-      migration-datastore:
-        condition: service_started
-    container_name: kanthor-services-attempt-trigger-planner
-    build: .
-    restart: unless-stopped
-    networks:
-      - kanthor
-    volumes:
-      - ./docker/.kanthor:/root/.kanthor
-    command:
-      - kanthor
-      - serve
-      - attempt.trigger.planner
-
-  attempt-trigger-executor:
-    depends_on:
-      streaming:
-        condition: service_started
-      warehouse:
-        condition: service_healthy
-      migration-datastore:
-        condition: service_started
-    container_name: kanthor-services-attempt-trigger-executor
-    build: .
-    restart: unless-stopped
-    networks:
-      - kanthor
-    volumes:
-      - ./docker/.kanthor:/root/.kanthor
-    command:
-      - kanthor
-      - serve
-      - attempt.trigger.executor
-
-  attempt-endeavor-planner:
-    depends_on:
-      streaming:
-        condition: service_started
-      warehouse:
-        condition: service_healthy
-      migration-datastore:
-        condition: service_started
-    container_name: kanthor-services-attempt-endeavor-planner
-    build: .
-    restart: unless-stopped
-    networks:
-      - kanthor
-    volumes:
-      - ./docker/.kanthor:/root/.kanthor
-    command:
-      - kanthor
-      - serve
-      - attempt.endeavor.planner
-
-  attempt-endeavor-executor:
-    depends_on:
-      streaming:
-        condition: service_started
-      warehouse:
-        condition: service_healthy
-      migration-datastore:
-        condition: service_started
-    container_name: kanthor-services-attempt-endeavor-executor
-    build: .
-    restart: unless-stopped
-    networks:
-      - kanthor
-    volumes:
-      - ./docker/.kanthor:/root/.kanthor
-    command:
-      - kanthor
-      - serve
-      - attempt.endeavor.executor
-
+ 
 networks:
   kanthor:
     name: kanthor
