--- a/.github/workflows/sdk.yaml
+++ b/.github/workflows/sdk.yaml
@@ -30,7 +30,9 @@ jobs:
         run: |
           cp core/openapi/Sdk_swagger.json sdk/openapi.json
           cp core/openapi/Sdk_swagger.yaml sdk/openapi.yaml
-          cp core/scripts/sdk_setup.sh sdk/scripts/sdk_setup.
+          cp core/scripts/sdk_setup.sh sdk/scripts/sdk_setup.sh
+          cp core/internal/routing/condition_source.go sdk/routing/condition_source.go
+          cp core/internal/routing/condition_expression.go sdk/routing/condition_expression.go
           # replace version
           jq --arg version $(cat core/.version) '.version = $version' sdk/project.json > project.json
           rm sdk/project.json
